[gd_scene load_steps=21 format=3 uid="uid://dit4wkbv0e3nr"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_y03rj"]
[ext_resource type="Texture2D" uid="uid://dkesf4jdomoiv" path="res://assets/musket.png" id="3_vos4w"]
[ext_resource type="PackedScene" uid="uid://c1oiwddddlb18" path="res://scenes/sabre.tscn" id="4_vajmw"]
[ext_resource type="Texture2D" uid="uid://1f1ubxptl1s3" path="res://assets/player.png" id="5_v052w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lcexw"]
atlas = ExtResource("5_v052w")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj6xy"]
atlas = ExtResource("5_v052w")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_irq4u"]
atlas = ExtResource("5_v052w")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_mn4b3"]
atlas = ExtResource("5_v052w")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_oepqh"]
atlas = ExtResource("5_v052w")
region = Rect2(150, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kybl"]
atlas = ExtResource("5_v052w")
region = Rect2(0, 150, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l56g"]
atlas = ExtResource("5_v052w")
region = Rect2(50, 150, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xng5"]
atlas = ExtResource("5_v052w")
region = Rect2(0, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_thc8d"]
atlas = ExtResource("5_v052w")
region = Rect2(50, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_uadvf"]
atlas = ExtResource("5_v052w")
region = Rect2(100, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljsot"]
atlas = ExtResource("5_v052w")
region = Rect2(150, 50, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg5u3"]
atlas = ExtResource("5_v052w")
region = Rect2(0, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_j8ie6"]
atlas = ExtResource("5_v052w")
region = Rect2(50, 100, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gdff"]
atlas = ExtResource("5_v052w")
region = Rect2(100, 100, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_5crhn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lcexw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj6xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irq4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mn4b3")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oepqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kybl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l56g")
}],
"loop": true,
"name": &"walking_away",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xng5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thc8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uadvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljsot")
}],
"loop": true,
"name": &"walking_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg5u3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8ie6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gdff")
}],
"loop": true,
"name": &"walking_toward",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lf6aj"]
size = Vector2(18, 16)

[node name="player" type="CharacterBody2D"]
position = Vector2(0, -6)
collision_layer = 7
collision_mask = 7
script = ExtResource("1_y03rj")

[node name="Musket" type="Sprite2D" parent="."]
visible = false
position = Vector2(19, 9)
scale = Vector2(0.609091, 0.6)
texture = ExtResource("3_vos4w")

[node name="Marker2D" type="Marker2D" parent="Musket"]
position = Vector2(28.0534, -1.00281)

[node name="reload" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="sabre" parent="." instance=ExtResource("4_vajmw")]
position = Vector2(1, -17)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.75, -19.25)
sprite_frames = SubResource("SpriteFrames_5crhn")
animation = &"walking_side"

[node name="Meleetimer" type="Timer" parent="."]

[node name="Healthbar" type="ProgressBar" parent="."]
modulate = Color(0.141176, 1, 0.14902, 1)
z_index = 2
z_as_relative = false
offset_left = -40.0
offset_top = -86.0
offset_right = 48.0
offset_bottom = -59.0
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, -3)
shape = SubResource("RectangleShape2D_lf6aj")

[connection signal="timeout" from="reload" to="." method="_on_reload_timeout"]
[connection signal="body_entered" from="sabre" to="." method="_on_sabre_body_entered"]
[connection signal="timeout" from="Meleetimer" to="." method="_on_meleetimer_timeout"]
